testdata/baselines/reference/submodule/conformance/typedefCrossModule3.errors.txt
mod2.js(4,8): error TS2540: Cannot assign to 'exports' because it is a read-only property.


==== mod2.js (1 errors) ====
    /** @typedef {number} Foo */
    const ns = {};
    ns.Foo = class {}
    module.exports = ns;
           ~~~~~~~
!!! error TS2540: Cannot assign to 'exports' because it is a read-only property.
    
    